# rust-postgres-graphql

./: .tool-versions  Cargo.toml  README.md  Taskfile.yml  diesel.toml  docker-compose.yml
.cargo/: config.toml
docs/: database.sql  rpg.gql  server.gql
migrations/2024-06-23-231028_create_users_table/: up.sql
seeds/: users.json
src/: config.rs  core.rs  main.rs  server.rs
src/core/: models.rs  repo.rs  schema.rs  users.rs
src/core/models/: schema.rs
src/core/users/: mod.rs
src/server/: error.rs  graph.rs  mod.rs  resolvers.rs  schema.rs
src/server/resolvers/: errors.rs  user.rs  user_resolver.rs
src/server/schema/: user.rs  user_schema.rs
src/test/: factory.rs
