[package]
name = "rpg"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "7.0.6", features = ["chrono", "uuid"] }
async-graphql-axum = "7.0.6"
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["alloc"] }
clap = { version = "4.5.8", features = ["derive"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.2.1", features = ["chrono", "postgres", "uuid"] }
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4", "v7"] }
validator = { version = "0.18.1", features = ["derive"] }
